[gd_scene load_steps=11 format=2]

[ext_resource path="res://spritesheet_personagem_sem_fundo_final1.png" type="Texture" id=1]
[ext_resource path="res://script_personagem.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 43.75, 75.5 )

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:region_rect")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Rect2( 16, 518, 82, 117 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -9, 104 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "andando"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 15, 97, 74, 143 ), Rect2( 119, 97, 74, 143 ), Rect2( 217, 96, 78, 146 ), Rect2( 332, 98, 75, 146 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4.98674, 72 ), Vector2( -4.64832, 72.903 ), Vector2( -8.44871, 70.555 ), Vector2( -3.83821, 73.017 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "ataque"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 11, 1280, 72, 111 ), Rect2( 167, 1284, 69, 107 ), Rect2( 249, 1289, 72, 105 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -4, 92 ), Vector2( -7, 96 ), Vector2( -4, 99 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "atirando"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 199, 826, 75, 106 ), Rect2( 286, 825, 85, 106 ), Rect2( 380, 826, 83, 104 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "atirar_flecha"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1.58706, 96.4648 ), Vector2( 2.00001, 96 ), Vector2( 2.00001, 96 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "morrendo"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 10, 1417, 75, 113 ), Rect2( 118, 1436, 98, 90 ), Rect2( 236, 1473, 136, 57 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -9, 104 ), Vector2( -5, 102 ), Vector2( -2.99998, 103 ), Vector2( -5, 107 ), Vector2( -3, 107 ), Vector2( 7, 119 ), Vector2( 7, 122 ), Vector2( 12, 122 ), Vector2( 13, 120 ), Vector2( 12, 122 ), Vector2( 37, 146 ), Vector2( 39, 147 ), Vector2( 39, 144 ), Vector2( 41, 145 ), Vector2( 36, 148 ), Vector2( 35, 147 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "pulando"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 136, 352, 74, 139 ), Rect2( 24, 352, 78, 133 ), Rect2( 231, 352, 78, 133 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -5.99999, 76 ), Vector2( -5.99999, 76 ), Vector2( -5.99999, 76 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "respirando"
length = 0.7
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 16, 518, 82, 117 ), Rect2( 122, 518, 77, 116 ), Rect2( 223, 520, 78, 115 ), Rect2( 323, 520, 81, 115 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 2.99998, 89 ), Vector2( -2.7487, 89 ), Vector2( 1.99998, 88 ), Vector2( -1.52588e-05, 89 ) ]
}

[node name="Personagem" type="Node2D"]
position = Vector2( 498, 288 )
__meta__ = {
"_edit_vertical_guides_": [ 353.0 ]
}

[node name="Personagem" type="KinematicBody2D" parent="."]
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="Personagem"]
position = Vector2( -9, 104 )
scale = Vector2( 1.31289, 1.31034 )
texture = ExtResource( 1 )
offset = Vector2( 9.29449, -73.5478 )
region_enabled = true
region_rect = Rect2( 16, 518, 82, 117 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Personagem"]
position = Vector2( 6, -8 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Personagem"]
anims/RESET = SubResource( 2 )
anims/andando = SubResource( 5 )
anims/ataque = SubResource( 8 )
anims/atirando = SubResource( 3 )
anims/morrendo = SubResource( 9 )
anims/pulando = SubResource( 6 )
anims/respirando = SubResource( 4 )

[node name="Position2D" type="Position2D" parent="Personagem"]
position = Vector2( 39, 9 )

[node name="Camera2D" type="Camera2D" parent="Personagem"]
position = Vector2( -2, 0 )
current = true

[node name="RayCast2DMaoEsq" type="RayCast2D" parent="Personagem"]
position = Vector2( -49, -17 )
rotation = 1.57079
scale = Vector2( 7.96127, 0.908904 )
collision_mask = 8

[node name="RayCast2DMaoDir" type="RayCast2D" parent="Personagem"]
position = Vector2( 66, -19 )
rotation = 4.71238
scale = Vector2( 7.96127, 0.908904 )
collision_mask = 8

[connection signal="animation_finished" from="Personagem/AnimationPlayer" to="Personagem" method="animacao_finalizada"]
